--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
 							</header>
 							<p>I am: <br>
 								-	Efficient in preparing data for reports<br>
-								-	Proficient in understanding, querying, analysing insights, and extracting meaningful business insights and visualizing them to business stakeholders using dynamic dashboards.<br>
 								-	Hard skills: SQL, Python, KNIME, Power BI, Excel.<br>
 								-	Problem Solver, Collaborative, Self- Motivated, Possessing Continuous Process Improvement Mindset: I possess an ability to manage multiple projects with actively engaging with an analytical mindset, and able to break down littel bit complex process to deduce the root cause of the problem.</p>
 						</div>
@@ -79,7 +78,7 @@
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/Cross Selling.jpg" alt="" /></span>
 							<h3><a href="https://colab.research.google.com/drive/1lbZ8gbokxBCRO8zRIg3U9yZ96OTvWWU8?usp=sharing" target="_blank">Exploratory Data Analysis using Python</a></h3>
-							<p>Performed exploratory data analysis to gain insights for cross-selling of banking products using Python and prepared a dashboard with Tableau.</p>
+							<p>Performed exploratory data analysis to gain insights for cross-selling of customer churn Subscription using Python. </p>
 							<ul class="actions special">
 								<li><a href="https://colab.research.google.com/drive/1lbZ8gbokxBCRO8zRIg3U9yZ96OTvWWU8?usp=sharing" target="_blank" class="button">View Project</a></li>
 							</ul>
