--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
 		<meta http-equiv='cache-control' content='no-cache'> 
 		<meta http-equiv='expires' content='0'> 
 		<meta http-equiv='pragma' content='no-cache'>
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-M1NDHNGR4W"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+		
+		  gtag('config', 'G-M1NDHNGR4W');
+		</script>
 	</head>
 	<body class="is-preload">
 
