--- a/index.html
+++ b/index.html
@@ -140,6 +140,14 @@
 								<li><a href="https://github.com/rajiiv212/20211030_Test_Assignment/blob/main/Text_Analysis.py" target="_blank" class="button">View Project</a></li>
 							</ul>
 						</div>
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img src="images/PowerBi_Analytics_Dashboard.png" alt="" /></span>
+							<h3><a href="https://github.com/rajiiv212/PowerBi_Analytics_Dashboard" target="_blank">PowerBi_Analytics_Dashboard</a></h3>
+							<p>View some interactive dashboards!</p>
+							<ul class="actions special">
+								<li><a href="https://github.com/rajiiv212/PowerBi_Analytics_Dashboard" target="_blank" class="button">View Project</a></li>
+							</ul>
+						</div>
 					</div>
 				</div>
 			</section>
