--- a/index.html
+++ b/index.html
@@ -141,6 +141,14 @@
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
+							<span class="image fit"><img src="images/Prediction Using Machine Learning.jpg" alt="" /></span>
+							<h3><a href="https://github.com/rajiiv212/Diabetes_Prediction_Using_Machine_Learning/blob/main/Diabetes%20Prediction%20Using%20Machine%20Learning.ipynb" target="_blank">Prediction Using Machine Learning</a></h3>
+							<p>Prediction in machine learning, refers to the output of an algorithm that has been trained on a historical dataset. The algorithm then generates probable values for unknown variables in each record of the new data.</p>
+							<ul class="actions special">
+								<li><a href="https://github.com/rajiiv212/Diabetes_Prediction_Using_Machine_Learning/blob/main/Diabetes%20Prediction%20Using%20Machine%20Learning.ipynb" target="_blank" class="button">View Project</a></li>
+							</ul>
+						</div>
+						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="images/PowerBi_Analytics_Dashboard.png" alt="" /></span>
 							<h3><a href="https://github.com/rajiiv212/PowerBi_Analytics_Dashboard" target="_blank">PowerBi_Analytics_Dashboard</a></h3>
 							<p>View some interactive dashboards!</p>
