--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 								<h2>About Me</h2>
 							</header>
 							<span>Hey there, I'm Rajeev. I am a certified data analyst with a bachelor's degree in IT engineering.<br>
-								I have always been passionate about finding insights, story-telling and presenting through visuals. I have worked as a Data Analyst for 4 month. I posses ability to translate littel bit complex questions into understandable insights.<br>
+								I have always been passionate about finding insights, story-telling and presenting through visuals. I have worked as a Data Analyst for 1.5 Years. I posses ability to translate littel bit complex questions into understandable insights.<br>
 								</span>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
