--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 								<h2>About Me</h2>
 							</header>
 							<span>Hey there, I'm Rajeev. I am a certified data analyst with a bachelor's degree in IT engineering.<br>
-								I have always been passionate about finding insights, story-telling and presenting through visuals. I have worked as a Data Analyst for 1.5 Years. I posses ability to translate littel bit complex questions into understandable insights.<br>
+								I have always been passionate about finding insights, story-telling and presenting through visuals. I have worked as a Data Analyst for 1.5 Years. I posses ability to translate complex questions into understandable insights.<br>
 								</span>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
@@ -70,8 +70,8 @@
 							</header>
 							<p>I am: <br>
 								-	Efficient in preparing data for reports<br>
-								-	Hard skills: SQL, Python, KNIME, Power BI, Excel.<br>
-								-	Problem Solver, Collaborative, Self- Motivated, Possessing Continuous Process Improvement Mindset: I possess an ability to manage multiple projects with actively engaging with an analytical mindset, and able to break down littel bit complex process to deduce the root cause of the problem.</p>
+								-	Hard skills: SQL, Python, Power BI, Excel.<br>
+								-	Problem Solver, Collaborative, Self- Motivated, Possessing Continuous Process Improvement Mindset: I possess an ability to manage multiple projects with actively engaging with an analytical mindset, and able to break down complex process to deduce the root cause of the problem.</p>
 						</div>
 					</div>
 				</div>
